# NetBridge-CLI

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
netbridge/: __init__.py  cli.py
netbridge/core/: __init__.py  cache.py  config.py  engine.py  normalizer.py
netbridge/mcp/: __init__.py  server.py
netbridge/plugins/: __init__.py  base.py  bilibili.py  github.py  linkedin.py  reddit.py  rss.py  twitter.py  v2ex.py  web.py  xiaohongshu.py  xiaoyuzhou.py  xueqiu.py  youtube.py
netbridge/utils/: __init__.py  logger.py  network.py
tests/: __init__.py  test_cache.py  test_engine.py  test_normalizer.py  test_plugins.py
